@@ -15,6 +15,7 @@ CREATE TABLE questions (
   examples int(1) NOT NULL default '0',
   answers int(1) NOT NULL default '0',
   commentable int(1) NOT NULL default '0',
+  ask_email int{1} NOT NULL default '0',
   PRIMARY KEY  (uid)
 ) TYPE=MyISAM;
 
@@ -22,5 +23,5 @@ CREATE TABLE questions (
 -- Dumping data for table `questions`
 --
 
-INSERT INTO questions VALUES (0,'What\'s in a namespace?','0','0','1');
-INSERT INTO questions VALUES (1,'A question with an example','1','1','0');
+INSERT INTO questions VALUES (0,'What\'s in a namespace?','0','0','1','0');
+INSERT INTO questions VALUES (1,'A question with an example','1','1','0','0');
